--- a/infrastructure/dev-server-for-petclinic-app-cfn-template.yml
+++ b/infrastructure/dev-server-for-petclinic-app-cfn-template.yml
@@ -24,6 +24,50 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9090
+          ToPort: 9090
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8081
+          ToPort: 8081
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8082
+          ToPort: 8082
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8083
+          ToPort: 8083
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8888
+          ToPort: 8888
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9411
+          ToPort: 9411
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 7979
+          ToPort: 7979
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9091
+          ToPort: 9091
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8761
+          ToPort: 8761
+          CidrIp: 0.0.0.0/0
   PetclinicServerLT:
     Type: "AWS::EC2::LaunchTemplate"
     Properties:
@@ -35,22 +79,20 @@ Resources:
           - !GetAtt PetclinicDemoSG.GroupId
         UserData:
           Fn::Base64: |
-        #! /bin/bash
-        yum update -y
-        hostnamectl set-hostname petclinic-dev-server
-        amazon-linux-extras install docker -y
-        systemctl start docker
-        systemctl enable docker
-        usermod -a -G docker ec2-user
-        curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
-        -o /usr/local/bin/docker-compose
-        chmod +x /usr/local/bin/docker-compose
-        yum install git -y
-        yum install java-11-amazon-corretto -y
-        git clone https://github.com/tacettinkot/petclinic-microservices.git
-        cd petclinic-microservices
-        git fetch
-        git checkout dev
+            #! /bin/bash
+            yum update -y
+            hostnamectl set-hostname petclinic-dev-server
+            amazon-linux-extras install docker -y
+            systemctl start docker
+            systemctl enable docker
+            usermod -a -G docker ec2-user
+            curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
+            -o /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
+            yum install git -y
+            yum install java-11-amazon-corretto -y
+            git clone https://github.com/clarusway/petclinic-microservices-with-db.git
+            git checkout dev
   PetclinicServer:
     Type: AWS::EC2::Instance
     Properties:
@@ -64,3 +106,4 @@ Outputs:
   PetclinicServerDNSName:
     Description: Petclinic App URL
     Value: !GetAtt PetclinicServer.PublicDnsName
+  
